# trial_api_orchestrator

./: .pre-commit-config.yaml  AGENTS.md  Makefile  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
ai_docs/: adapter_docs.md  architecture.md  client_exposed_api.md  providers_api_docs.md  supported_providers.md
ai_docs/development_diary/: frontend.md  initial_planning.md
app/: __main__.py  logging.py  main.py
app/api/: admin.py  openai.py
app/core/: config.py  exceptions.py
app/middleware/: request_context.py
app/providers/: base.py  cerebras.py  cohere.py  gemini.py  huggingface.py  openrouter.py  utils.py
app/router/: selector.py
app/static/css/: styles.css
app/storage/: credentials.py  database.py  models.py  provider_logs.py
app/telemetry/: events.py
app/templates/: provider_logs.html  providers.html
config/: providers.yaml
data/: orchestrator.db
tests/: conftest.py  test_events.py
tests/api/: test_admin.py  test_openai_routes.py
tests/providers/: test_cohere_adapter.py  test_gemini_adapter.py  test_huggingface_adapter.py  test_openrouter_adapter.py
tests/router/: test_selector.py
tests/storage/: test_credentials.py
