[project]
name = "trial-api-orchestrator"
version = "0.1.0"
description = "OpenAI-compatible router for rotating trial AI API providers"
authors = [{name = "Orchestrator Team"}]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.30.0",
    "pydantic>=2.7.4",
    "httpx>=0.27.0",
    "jinja2>=3.1.4",
    "pyyaml>=6.0.0",
    "sqlalchemy>=2.0.32",
    "python-multipart>=0.0.9",
    "typing_extensions>=4.7.0"
]

[project.optional-dependencies]
dev = [
    "python-dotenv>=1.0.1",
    "pytest>=8.3.0",
    "pytest-asyncio>=0.23.5",
    "ruff>=0.6.5"
]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"
