[project]
name = "trial-api-orchestrator"
version = "0.1.0"
description = "OpenAI-compatible router for rotating trial AI API providers"
authors = [{name = "Orchestrator Team"}]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.30.0",
    "pydantic>=2.7.4",
    "httpx>=0.27.0",
    "jinja2>=3.1.4",
    "pyyaml>=6.0.0",
    "sqlalchemy>=2.0.32",
    "python-multipart>=0.0.9",
    "typing_extensions>=4.7.0",
    "ruff>=0.13.2",
    "mypy>=1.11.0"
]

[project.optional-dependencies]
dev = [
    "python-dotenv>=1.0.1",
    "pytest>=8.3.0",
    "pytest-asyncio>=0.23.5",
    "pytest-cov>=5.0.0",
    "ruff>=0.6.5",
    "mypy>=1.11.0",
    "types-PyYAML>=6.0.12.12"
]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
testpaths = [
    "tests"
]
asyncio_mode = "auto"
filterwarnings = [
    "ignore::DeprecationWarning"
]

[tool.ruff]
line-length = 100
src = ["app", "tests"]

[tool.ruff.lint]
select = [
    "E",
    "F",
    "I",
    "UP",
    "ASYNC",
    "B",
    "BLE",
    "COM",
    "DTZ",
    "LOG",
    "PIE",
    "PL",
    "PT",
    "RET",
    "SIM",
    "SLOT",
    "TRY"
]
ignore = ["COM812"]

[tool.ruff.lint.per-file-ignores]
"tests/**/*" = ["S101"]

[tool.ruff.format]
quote-style = "preserve"
indent-style = "space"

[tool.mypy]
python_version = "3.10"
plugins = ["pydantic.mypy"]
disallow_untyped_defs = true
warn_return_any = true
no_implicit_optional = true
strict_equality = true
ignore_missing_imports = true

[tool.coverage.run]
source = ["app"]
omit = [
    "app/__init__.py",
    "app/__main__.py"
]
